force-app/main/default/objects/Tourism_Partner_Projection__c/Tourism_Partner_Projection__c.object-meta.xml
<CustomObject>
    <description>Projected Tourism partner visit contributions</description>
    <label>Tourism Partner Projection</label>
    <nameField>
        <displayFormat>TPP-{000000}</displayFormat>
        <label>Tourism Partner Projection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tourism Partner Projections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>