force-app/main/default/objects/Tourism_Partner_Projection__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <description>The number of guests projected for April</description>
    <inlineHelpText>The number of guests projected for April</inlineHelpText>
    <label>April</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>