force-app/main/default/objects/Tourism_Partner_Projection__c/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <description>The number of guests projected for August</description>
    <inlineHelpText>The number of guests projected for August</inlineHelpText>
    <label>August</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>