force-app/main/default/objects/Tourism_Partner_Projection__c/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <description>The number of guests projected for December</description>
    <inlineHelpText>The number of guests projected for December</inlineHelpText>
    <label>December</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>