force-app/main/default/objects/Tourism_Partner_Projection__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <description>The number of guests projected for February</description>
    <inlineHelpText>The number of guests projected for February</inlineHelpText>
    <label>February</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>