force-app/main/default/objects/Tourism_Partner_Projection__c/fields/Group_or_Village_Projection__c.field-meta.xml
<CustomField>
    <fullName>Group_or_Village_Projection__c</fullName>
    <description>shows whether the Projection is village or group owned</description>
    <inlineHelpText>Please select whether this projection is group or village owned (Tourism reps are group owned)</inlineHelpText>
    <label>Group or Village Projection</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Group Projection</fullName>
            </value>
            <value>
                <fullName>Village Projection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>