force-app/main/default/objects/Tourism_Partner_Projection__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <description>The number of guests projected for January</description>
    <inlineHelpText>The number of guests projected for January</inlineHelpText>
    <label>January</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>