force-app/main/default/objects/Tourism_Partner_Projection__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <description>The number of guests projected for July</description>
    <inlineHelpText>The number of guests projected for July</inlineHelpText>
    <label>July</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>