force-app/main/default/objects/Tourism_Partner_Projection__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <description>The number of guests projected for June</description>
    <inlineHelpText>The number of guests projected for June</inlineHelpText>
    <label>June</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>