force-app/main/default/objects/Tourism_Partner_Projection__c/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <description>The projected guest numbers for March</description>
    <inlineHelpText>The projected guest numbers for March</inlineHelpText>
    <label>March</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>