force-app/main/default/objects/Tourism_Partner_Projection__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <description>The number of guests projected for May</description>
    <inlineHelpText>The number of guests projected for May</inlineHelpText>
    <label>May</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>