force-app/main/default/objects/Tourism_Partner_Projection__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Partnership_Account__r.Name   &amp; &apos; for &apos; &amp;  TEXT(Projected_Year__c) &amp; &apos; for &apos; &amp;  TEXT(Village__c)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>