force-app/main/default/objects/Tourism_Partner_Projection__c/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <description>The number of guests projected for November</description>
    <inlineHelpText>The number of guests projected for November</inlineHelpText>
    <label>November</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>