force-app/main/default/objects/Tourism_Partner_Projection__c/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <description>The number of guests projected for October</description>
    <inlineHelpText>The number of guests projected for October</inlineHelpText>
    <label>October</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>