force-app/main/default/objects/Tourism_Partner_Projection__c/fields/October_Actual__c.field-meta.xml
<CustomField>
    <fullName>October_Actual__c</fullName>
    <description>Actual numbers as calculated from visits</description>
    <inlineHelpText>Actual numbers as calculated from visits</inlineHelpText>
    <label>October Actual</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>