force-app/main/default/objects/Tourism_Partner_Projection__c/fields/Partnership_Account__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Account__c</fullName>
    <description>The Tourism partner</description>
    <inlineHelpText>The Tourism partner</inlineHelpText>
    <label>Partnership Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Tourism accounts can have projections</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tourism</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tourism Partner Projections</relationshipLabel>
    <relationshipName>Tourism_Partner_Projections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>