force-app/main/default/objects/Tourism_Partner_Projection__c/fields/Projected_Year__c.field-meta.xml
<CustomField>
    <fullName>Projected_Year__c</fullName>
    <description>The year for which the projections are</description>
    <inlineHelpText>The year for which the projections are</inlineHelpText>
    <label>Projected Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
                <default>true</default>
                <label>2020</label>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
                <isActive>false</isActive>
                <label>2017</label>
            </value>
            <value>
                <fullName>2018</fullName>
                <isActive>false</isActive>
                <label>2018</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>