force-app/main/default/objects/Tourism_Partner_Projection__c/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <description>The number of guests projected for September</description>
    <inlineHelpText>The number of guests projected for September</inlineHelpText>
    <label>September</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>