force-app/main/default/objects/Tourism_Partner_Projection__c/fields/Total_Actual_Pax__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Pax__c</fullName>
    <formula>January_Actual__c + February_Actual__c + March_Actual__c + April_Actual__c + May_Actual__c + June_Actual__c + July_Actual__c + August_Actual__c + September_Actual__c + October_Actual__c + November_Actual__c + December_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>