force-app/main/default/objects/Tourism_Partner_Projection__c/fields/Total_Expected_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Sales__c</fullName>
    <description>The total sales that we might expect from the guests this partner will bring to the village. (guests x av guest spend). this setting is in custom settings</description>
    <formula>Total_Projected_Pax__c  * Visitor_Source__r.Revenue_per_Visitor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total sales that we might expect from the guests this partner will bring to the village. (guests x av guest spend). Request from IT to change this setting.</inlineHelpText>
    <label>Total Expected Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>