force-app/main/default/objects/Tourism_Partner_Projection__c/fields/Total_Projected_Pax__c.field-meta.xml
<CustomField>
    <fullName>Total_Projected_Pax__c</fullName>
    <description>The total number of guests projected for the year</description>
    <formula>January__c + February__c + March__c + April__c + May__c + June__c + July__c + August__c + September__c + October__c + November__c + December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of guests projected for the year</inlineHelpText>
    <label>Total Projected Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>