force-app/main/default/objects/Tourism_Partner_Projection__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <description>The village that this projection is for</description>
    <inlineHelpText>The village that this projection is for</inlineHelpText>
    <label>Village</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Village</valueSetName>
    </valueSet>
</CustomField>