force-app/main/default/objects/Tourism_Partner_Projection__c/fields/Visitor_Source__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The source of the visitors. defines the value of the average spend that each person is expected to spend</description>
    <inlineHelpText>Select the source of the visitor. This defines how much on average each visitor might spend.</inlineHelpText>
    <label>Visitor Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Group_Source__c.Archived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Group_Source__c</referenceTo>
    <relationshipLabel>Tourism Partner Projections</relationshipLabel>
    <relationshipName>Tourism_Partner_Projections</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>