force-app/main/default/objects/Tourism_Partner_Projection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>Visitor_Source__c</columns>
    <columns>Status__c</columns>
    <columns>Group_or_Village_Projection__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>