force-app/main/default/objects/Tourism_Partner_Projection__c/listViews/All_TPPs.listView-meta.xml
<ListView>
    <fullName>All_TPPs</fullName>
    <columns>NAME</columns>
    <columns>Total_Actual_Pax__c</columns>
    <columns>Group_or_Village_Projection__c</columns>
    <columns>Projected_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All TPPs</label>
    <language>en_US</language>
</ListView>